# CMake-Cpp-Starter

./: CMakeLists.txt  README.md
src/: main.cpp
